syntax = "proto3"; // Define the protocol buffer version

option csharp_namespace = "GrpcDemo.Grpc";

// Import a timestamp package from Google
import "google/protobuf/timestamp.proto";

service MeterReadingService {
    rpc AddReading (ReadingMessage) returns (StatusMessage);
}

message ReadingPacket {
    repeated ReadingMessage Readings = 1; // repeated key word is equivalent to the array
    ReadingStatus Successful = 2;
}

// Numbers after the value are the ordinal positions of the serialisation
// They are not values
message ReadingMessage {
    int32 CustomerId = 1;
    int32 ReadingValue = 2;
    string Notes = 3;
    google.protobuf.Timestamp ReadingTime = 5; // Required to import a package
    reserved 4; // message at position 4 is deprecated
    reserved 'Successful'; // field "Successful" has been deprecated
}

message StatusMessage {
    ReadingStatus Success = 1;
    string Message = 2;
}

enum ReadingStatus {
    Unknown = 0;
    Success = 1;
    Failure = 2;
}jjj